--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.1",
     "angular-material": "^1.2.3",
     "bootstrap": "^5.0.2",
+    "breadcrumb": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
